<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/DetailsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/spreading_smiles"
                android:textColor="#fb4f4f"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingTop="8dp"
                android:text="@string/smile_details"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            style="@style/DetailsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/blood_organ_donation"
                android:textColor="#fb4f4f"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingTop="8dp"
                android:text="@string/blood_donation"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>