<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eeeeee"
        android:orientation="vertical" >

        <!-- Image & Text overlay -->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center" >

            <ImageView
                android:id="@+id/iv_epic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/black_overlay" />

            <TextView
                android:id="@+id/tv_ename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </FrameLayout>

        <!-- Date & Time -->

        <LinearLayout
            style="@style/DetailsCard"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_edate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#31b49d"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="#ADADAD"
                    android:textSize="12sp" />
            </LinearLayout>

            <View style="@style/HorizontalDivider" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_etime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#31b49d"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="#ADADAD"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/prize_venue"
            style="@style/DetailsCard"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_evenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#31b49d"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/venue"
                    android:textColor="#ADADAD"
                    android:textSize="12sp" />
            </LinearLayout>

            <View style="@style/HorizontalDivider" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_eprize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/generic_prize"
                    android:textColor="#31b49d"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prize_money"
                    android:textColor="#ADADAD"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- End -->

        <LinearLayout
            android:id="@+id/card_details"
            style="@style/DetailsCard" >

            <TextView
                style="@style/CardDetailsTextHeader"
                android:text="@string/details" />

            <TextView
                android:id="@+id/tv_edesc"
                style="@style/CardDetailsText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_rules"
            style="@style/DetailsCard" >

            <TextView
                style="@style/CardDetailsTextHeader"
                android:text="@string/rules" />

            <TextView
                android:id="@+id/tv_erules"
                style="@style/CardDetailsText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_heads"
            style="@style/DetailsCard"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="8dp"
                android:text="@string/event_heads"
                android:textColor="#31b49d"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/call1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_ehead1"
                    style="@style/ContactDetailsName" />

                <LinearLayout
                    android:id="@+id/phone1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="12sp"
                        android:layout_height="12sp"
                        android:layout_marginRight="5dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/call" />

                    <TextView
                        android:id="@+id/tv_ephone1"
                        style="@style/ContactDetailsNumber" />
                </LinearLayout>
            </LinearLayout>

            <View
                style="@style/VerticalDivider"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp" />

            <LinearLayout
                android:id="@+id/call2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_ehead2"
                    style="@style/ContactDetailsName" />

                <LinearLayout
                    android:id="@+id/phone2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="12sp"
                        android:layout_height="12sp"
                        android:layout_marginRight="5dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/call" />

                    <TextView
                        android:id="@+id/tv_ephone2"
                        style="@style/ContactDetailsNumber" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>